--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better U</title>
+    <title>Better Me</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="container">
         <!-- 헤더 -->
         <header class="header">
-            <h1><i class="fas fa-magic"></i> 더 나은 나로 한 걸음, Better U</h1>
+            <h1><i class="fas fa-magic"></i> 더 나은 나로 한 걸음, Better Me</h1>
             <p>AI가 분석하고 개선 방안을 제시합니다</p>
         </header>
 
@@ -396,7 +396,7 @@
 
         <!-- 푸터 -->
         <footer class="footer">
-            <p>&copy; Better U 개인정보는 이용 후 바로 삭제됩니다.</p>
+            <p>&copy; Better Me 개인정보는 이용 후 바로 삭제됩니다.</p>
         </footer>
     </div>
 
