--- a/index.html
+++ b/index.html
@@ -215,13 +215,12 @@
                         <!-- 정면 사진 -->
                         <div class="upload-item">
                             <h4><i class="fas fa-user"></i> 정면 사진</h4>
-                            <div class="upload-zone" id="upload-zone-front" data-type="front" onclick="showUploadOptions('front')" ondrop="handleDrop(event, 'front')" ondragover="handleDragOver(event)">
+                            <div class="upload-zone" id="upload-zone-front" data-type="front" onclick="document.getElementById('photo-input-front').click()" ondrop="handleDrop(event, 'front')" ondragover="handleDragOver(event)">
                                 <i class="fas fa-cloud-upload-alt"></i>
                                 <p>정면을 향한 사진</p>
                                 <p class="upload-hint">얼굴이 정면을 향하고 있어야 합니다</p>
                             </div>
                             <input type="file" id="photo-input-front" accept="image/*" style="display: none;" onchange="handleFileUpload(event, 'front')">
-                            <input type="file" id="camera-input-front" accept="image/*" capture="user" style="display: none;" onchange="handleFileUpload(event, 'front')" data-flash="off">
                             <div class="uploaded-image" id="uploaded-image-front" style="display: none;">
                                 <img id="preview-image-front" src="" alt="정면 사진">
                                 <button class="btn btn-secondary btn-sm" onclick="removeImage('front')">제거</button>
@@ -231,13 +230,12 @@
                         <!-- 45도 측면 사진 -->
                         <div class="upload-item">
                             <h4><i class="fas fa-user-friends"></i> 45도 측면 사진</h4>
-                            <div class="upload-zone" id="upload-zone-45" data-type="45" onclick="showUploadOptions('45')" ondrop="handleDrop(event, '45')" ondragover="handleDragOver(event)">
+                            <div class="upload-zone" id="upload-zone-45" data-type="45" onclick="document.getElementById('photo-input-45').click()" ondrop="handleDrop(event, '45')" ondragover="handleDragOver(event)">
                                 <i class="fas fa-cloud-upload-alt"></i>
                                 <p>45도 측면 사진</p>
                                 <p class="upload-hint">얼굴이 45도 각도로 보여야 합니다</p>
                             </div>
                             <input type="file" id="photo-input-45" accept="image/*" style="display: none;" onchange="handleFileUpload(event, '45')">
-                            <input type="file" id="camera-input-45" accept="image/*" capture="user" style="display: none;" onchange="handleFileUpload(event, '45')" data-flash="off">
                             <div class="uploaded-image" id="uploaded-image-45" style="display: none;">
                                 <img id="preview-image-45" src="" alt="45도 측면 사진">
                                 <button class="btn btn-secondary btn-sm" onclick="removeImage('45')">제거</button>
@@ -247,13 +245,12 @@
                         <!-- 90도 측면 사진 -->
                         <div class="upload-item">
                             <h4><i class="fas fa-user-secret"></i> 90도 측면 사진</h4>
-                            <div class="upload-zone" id="upload-zone-90" data-type="90" onclick="showUploadOptions('90')" ondrop="handleDrop(event, '90')" ondragover="handleDragOver(event)">
+                            <div class="upload-zone" id="upload-zone-90" data-type="90" onclick="document.getElementById('photo-input-90').click()" ondrop="handleDrop(event, '90')" ondragover="handleDragOver(event)">
                                 <i class="fas fa-cloud-upload-alt"></i>
                                 <p>90도 측면 사진</p>
                                 <p class="upload-hint">얼굴이 완전히 측면으로 보여야 합니다</p>
                             </div>
                             <input type="file" id="photo-input-90" accept="image/*" style="display: none;" onchange="handleFileUpload(event, '90')">
-                            <input type="file" id="camera-input-90" accept="image/*" capture="user" style="display: none;" onchange="handleFileUpload(event, '90')" data-flash="off">
                             <div class="uploaded-image" id="uploaded-image-90" style="display: none;">
                                 <img id="preview-image-90" src="" alt="90도 측면 사진">
                                 <button class="btn btn-secondary btn-sm" onclick="removeImage('90')">제거</button>
