--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                 <p>정면을 향한 사진</p>
                                 <p class="upload-hint">얼굴이 정면을 향하고 있어야 합니다</p>
                             </div>
-                            <input type="file" id="photo-input-front" accept="image/*" style="display: none;" onchange="handleFileUpload(event, 'front')">
+                            <input type="file" id="photo-input-front" accept="image/*" capture="user" style="display: none;" onchange="handleFileUpload(event, 'front')">
                             <div class="uploaded-image" id="uploaded-image-front" style="display: none;">
                                 <img id="preview-image-front" src="" alt="정면 사진">
                                 <button class="btn btn-secondary btn-sm" onclick="removeImage('front')">제거</button>
@@ -235,7 +235,7 @@
                                 <p>45도 측면 사진</p>
                                 <p class="upload-hint">얼굴이 45도 각도로 보여야 합니다</p>
                             </div>
-                            <input type="file" id="photo-input-45" accept="image/*" style="display: none;" onchange="handleFileUpload(event, '45')">
+                            <input type="file" id="photo-input-45" accept="image/*" capture="user" style="display: none;" onchange="handleFileUpload(event, '45')">
                             <div class="uploaded-image" id="uploaded-image-45" style="display: none;">
                                 <img id="preview-image-45" src="" alt="45도 측면 사진">
                                 <button class="btn btn-secondary btn-sm" onclick="removeImage('45')">제거</button>
@@ -250,7 +250,7 @@
                                 <p>90도 측면 사진</p>
                                 <p class="upload-hint">얼굴이 완전히 측면으로 보여야 합니다</p>
                             </div>
-                            <input type="file" id="photo-input-90" accept="image/*" style="display: none;" onchange="handleFileUpload(event, '90')">
+                            <input type="file" id="photo-input-90" accept="image/*" capture="user" style="display: none;" onchange="handleFileUpload(event, '90')">
                             <div class="uploaded-image" id="uploaded-image-90" style="display: none;">
                                 <img id="preview-image-90" src="" alt="90도 측면 사진">
                                 <button class="btn btn-secondary btn-sm" onclick="removeImage('90')">제거</button>
