Render 배포를 위한 최적화 및 설정 추가

--- a/index.html
+++ b/index.html
@@ -335,12 +335,10 @@
                         </div>
                     </div>
                     <div class="step-buttons">
-                        <div class="step-buttons-center">
-                            <button class="btn btn-primary" onclick="nextStep()" id="next-step-5">다음 단계</button>
-                        </div>
-                        <div class="step-buttons-right">
-                            <button class="btn btn-secondary" onclick="saveStep5AsImage()" id="save-step5">이미지로 저장하기</button>
-                        </div>
+                        <button class="btn btn-secondary" onclick="saveStep5AsImage()" id="save-step5">
+                            <i class="fas fa-image"></i> 이미지로 저장하기
+                        </button>
+                        <button class="btn btn-primary" onclick="nextStep()" id="next-step-5">다음 단계</button>
                     </div>
                 </div>
 
