feat: Add OpenAI proxy endpoints and update UI
- Add OpenAI chat completions proxy endpoint (/api/openai/chat/completions)
- Add OpenAI vision proxy endpoint (/api/openai/vision)
- Update payment options with KakaoPay, NaverPay, TossPay, Card
- Update logo styling and remove text subtitle
- Update upload requirements text
- Add Render deployment configuration
- Update color scheme to #CD3D3A

--- a/index.html
+++ b/index.html
@@ -288,13 +288,11 @@
                     </div>
                     
                     <div class="upload-requirements">
-                        <h3>업로드 요구사항</h3>
                         <ul>
-                            <li>얼굴이 명확하게 보이는 고화질 사진</li>
-                            <li>자연광이 충분한 환경에서 촬영</li>
-                            <li>화장이나 필터가 없는 상태</li>
-                            <li>각도별로 명확하게 구분되는 사진</li>
-                            <li>최대 10MB, JPG, PNG, WEBP 지원</li>
+                            <li>얼굴 분석은 메이크업하지 않은 맨 얼굴로 진행됩니다</li>
+                            <li>머리를 묶어 이목구비를 가리지 않도록 해주세요</li>
+                            <li>사진 촬영을 통해 분석이 진행되니 카메라 렌즈가 깨끗한지 확인해주세요</li>
+                            <li>분석은 총 1~3분 소요됩니다</li>
                         </ul>
                     </div>
                     
