--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 헤더 -->
     <header class="header">
         <div class="logo-container">
-            <h1 class="logo-text">Better Me</h1>
+            <img src="better-me-logo.png" alt="Better Me" class="main-logo">
         </div>
     </header>
 
