개인정보 외부 전송·제공 동의 상세 페이지 추가 및 Better Me → Better me 브랜드명 변경

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better Me</title>
+    <title>Better me</title>
     <link rel="stylesheet" href="styles.css?v=17">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <!-- 헤더 -->
     <header class="header">
         <div class="logo-container">
-            <img src="better-me-logo.png" alt="Better Me" class="main-logo">
+            <img src="better-me-logo.png" alt="Better me" class="main-logo">
         </div>
     </header>
 
@@ -47,9 +47,9 @@
 
             <!-- 단계별 컨텐츠 -->
             <div class="step-content">
-                <!-- 1단계: Better Me 서비스 이용 약관 -->
+                <!-- 1단계: Better me 서비스 이용 약관 -->
                 <div class="step-panel active" id="step-1">
-                    <h2>Better Me<br>서비스 이용약관</h2>
+                    <h2>Better me<br>서비스 이용약관</h2>
                     <p class="terms-subtitle">*중요내용만 추려뒀어요!</p>
                     
                     <!-- 약관동의 체크박스 -->
@@ -73,7 +73,7 @@
                             </div>
                             
                             <div class="terms-item">
-                                <h4><input type="checkbox" id="privacy-transfer" required> 개인정보의 외부 전송·제공 동의 <a href="#" class="terms-link">(보기)</a></h4>
+                                <h4><input type="checkbox" id="privacy-transfer" required> 개인정보의 외부 전송·제공 동의 <a href="privacy-transfer.html" target="_blank" class="terms-link">(보기)</a></h4>
                                 <ul>
                                     <li>서버로 전송된 사진은 분석 30일 후 완전 삭제됩니다</li>
                                 </ul>
@@ -359,7 +359,7 @@
 
     <!-- 푸터 -->
     <footer class="footer">
-        <p>&copy; Better Me 개인정보는 이용 후 바로 삭제됩니다.</p>
+        <p>&copy; Better me 개인정보는 이용 후 바로 삭제됩니다.</p>
     </footer>
 
     <!-- 로딩 모달 -->
