--- a/privacy-transfer.html
+++ b/privacy-transfer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인정보 외부 전송·제공 동의 - Better me</title>
+    <title>개인정보 외부 전송·제공 동의 - Better Me</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         .privacy-detail-container {
@@ -121,7 +121,7 @@
         <h1 class="privacy-title">개인정보 외부 전송·제공 동의</h1>
         
         <div class="privacy-content">
-            <p>Better me는 서비스 제공 및 결제 처리를 위하여 이용자의 개인정보를 아래와 같이 제3자에게 제공합니다.</p>
+            <p>Better Me는 서비스 제공 및 결제 처리를 위하여 이용자의 개인정보를 아래와 같이 제3자에게 제공합니다.</p>
             
             <div class="company-section">
                 <div class="company-title">① OpenAI Inc. (미국 소재)</div>
