Integrate hub website with main service
- Set hub website as main index.html
- Move face analysis service to face-analysis.html
- Add back button functionality to return to hub
- Update service links for deployment environment
- Add service images and Coming Soon image
- Configure proper navigation between services

--- a/face-analysis.html
+++ b/face-analysis.html
@@ -189,11 +189,11 @@
         </div>
 
         <div class="services">
-            <div class="service-card" onclick="window.open('face-analysis.html', '_blank')">
+            <div class="service-card" onclick="window.open('http://192.168.1.82:3000', '_blank')">
                 <img src="나한테 딱 맞는 얼굴분석.png" alt="나한테 딱 맞는 얼굴분석" class="service-title-image">
             </div>
 
-            <div class="service-card" onclick="openService('MakeupTipsService/index.html')">
+            <div class="service-card" onclick="openService('../MakeupTipsService/index.html')">
                 <img src="나만의 메이크업 팁 만들기.png" alt="나만의 메이크업 팁 만들기" class="service-title-image">
             </div>
 
