Fix Instagram navigation issue
- Change first service card from window.open to openService function
- Ensure consistent navigation behavior across all platforms
- Fix popup blocking issues on Instagram and other social media platforms

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
 
         <div class="services">
-            <div class="service-card" onclick="window.open('face-analysis.html', '_blank')">
+            <div class="service-card" onclick="openService('face-analysis.html')">
                 <img src="나한테 딱 맞는 얼굴분석.png" alt="나한테 딱 맞는 얼굴분석" class="service-title-image">
             </div>
 
