Update event tracking system and terms pages
- Add 5 new meaningful Google Analytics events:
  - face_analysis_clicked: Service card click tracking
  - terms_agreed: Terms consent completion tracking
  - analysis_started: Photo upload and analysis start tracking
  - analysis_result_viewed: Analysis result display tracking
  - image_saved: Image download tracking

- Create English terms pages:
  - terms-en.html: Service terms and conditions
  - privacy-en.html: Personal information collection agreement
  - external-transfer-en.html: External data transfer agreement

- Update photo upload guidelines:
  - Remove camera lens cleaning instruction
  - Add upper body visibility requirement

- Improve terms UI:
  - Add (View) buttons for detailed terms
  - Update summary descriptions
  - Sync Korean and English versions

--- a/index.html
+++ b/index.html
@@ -422,6 +422,16 @@
 
         // 언어에 따른 얼굴분석 서비스 열기
         function openFaceAnalysis() {
+            // GA4: 얼굴분석 서비스 클릭 이벤트
+            try { 
+                if (typeof gtag === 'function') { 
+                    gtag('event', 'face_analysis_clicked', {
+                        event_category: 'service',
+                        event_label: 'face_analysis'
+                    }); 
+                } 
+            } catch(e){}
+            
             const currentLang = currentLanguage || 'ko';
             const faceAnalysisUrl = currentLang === 'en' ? 'face-analysis-en.html' : 'face-analysis.html';
             openService(faceAnalysisUrl);
